# Yukon

./: .gitignore  CMakeLists.txt
Machine Oriented programming/: notes.txt
Machine Oriented programming/scr/: SD.c  card.h  deck.c  main.c
